# python-fluorofix

./: .gitignore  README.md  conf_default.json  fluorofix.onedir.spec  fluorofix.onefile.spec  install.py  package_win32.bat  requirements.txt  setup.cfg
dev/: configure.py  fluorofix.json  fluorofix.py  run_all.py  run_in_python.py  test_copy.py  test_list_sar.py  transcode.py  verify_dupes.py  verify_quality.py
src/fluorofix/: configure.py  probe.py  transcode.py
test/: _create_assets.py  alpha.py  test_lib.py  test_probe.py  test_transcode.py
