[metadata]
name = fluorofix
version = attr: fluorofix.__version__
description = Videofluoroscope PAR Correction & Deidentification
long_description_content_type = text/markdown
long_description = file: README.md
keywords = multimedia
license = GPL-2.0 License
url=https://github.com/tikuma-lsuhsc/python-fluorofix
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Capture/Recording
    Topic :: Multimedia :: Sound/Audio :: Conversion
    Topic :: Multimedia :: Video
    Topic :: Multimedia :: Video :: Capture
    Topic :: Multimedia :: Video :: Conversion
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
packages=fluorofix
install_requires =
    ffmpegio-core
    cerberus
python_requires = >=3.7,
